# test

./: test-local.sh
.github/workflows/: backend-ci.yml
UI/: app.py  config.py  report_generator.py  services.py  visualization.py
ecosystem_analyzer/: database.py  main.py
graph/: connection.py  models.py  pyproject.toml  repository.py  service.py
graph/tests/: test_connection.py  test_repository.py  test_service.py
