[project]
name = "graph"
version = "0.1.0"
description = ""
authors = [
    {name = "w3hhh-m",email = "w3hhh.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "RET",
    "ARG",
    "PTH",
    "RUF",
]

ignore = [
    "E501",   # line-too-long (строки > 88 символов)
    "UP045",  # non-pep604-annotation (Optional → X | None)
    "UP006",  # non-pep604-annotation (List → list)
    "UP035",  # deprecated typing imports
    "I001",   # unsorted-imports (сортировка импортов)
    "PTH123", # pathlib usage (open() → Path.open())
    "RET504", # unnecessary-assignment
    "RET505", # unnecessary-else
    "B904",   # raise-without-from
        # ... твои текущие правила ...
    
    # Для русского текста в docstrings
    "RUF002",  # ambiguous unicode in docstring (ложное срабатывание на кириллицу)
    
    # Мелочи, которые не критичны
    "RUF010",  # explicit conversion flag
    "UP015",   # unnecessary mode argument in open()
    
    # Пробелы и переносы (можно пофиксить авто, но пока игнорируем)
    "W291",    # trailing whitespace
    "W292",    # no newline at end of file
    "W293",    # blank line with whitespace
]


[tool.ruff.lint.isort]
known-first-party = ["graph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*",
]
