[project]
name = "graph"
version = "0.1.0"
description = ""
authors = [
    {name = "w3hhh-m",email = "w3hhh.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "RET",
    "ARG",
    "PTH",
    "RUF",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    # Игнорируем все ошибки типов и импортов
    "UP035",  # typing.List deprecated
    "UP045",  # Optional -> X | None
    "UP006",  # List -> list
    "UP015",  # Unnecessary mode argument
    "I001",   # Import block un-sorted
    # Игнорируем ошибки переменных
    "F841",   # Unused variable
    "F821",   # Undefined name
    # Игнорируем ошибки стиля
    "E501",   # Line too long
    "RET504", # Unnecessary assignment before return
    "RET505", # Unnecessary else after return
    "B904",   # Exception handling
    "RUF010", # Conversion flag
    "PTH123", # open() should be Path.open()
]

[tool.ruff.lint.isort]
known-first-party = ["graph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*",
]
